--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 							<article class="post featured">
 								<header class="major">
 									<h2><a href="https://github.com/Olukem/Energy-demand-forecasting">Time Series Forecasting of Energy Demand</a></h2>
+								</header>
+								<a href="https://github.com/Olukem/Energy-demand-forecasting" class="image main"><img src="images/time_series.jpg" alt="" class="responsive-image" /></a>
 									<p>This project delivers accurate and reliable energy demand forecasts by leveraging advanced models such as Convolutional Neural Networks (CNN), 
 										Temporal Convolutional Networks (TCN), and XGBoost, we predict future energy consumption trends with precision. An interactive RShiny dashboard 
 										was done to allows users explore real-time forecasts, providing valuable insights into energy demand patterns. 
 										This project empowers stakeholders to make data-driven decisions, optimize energy distribution, and enhance grid resilience. check pulication 
 										<a href="https://www.irejournals.com/paper-details/1706377">here</a> </p>
-								</header>
-								<a href="https://github.com/Olukem/Energy-demand-forecasting" class="image main"><img src="images/pngwing.com.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/Olukem/Energy-demand-forecasting" class="button large">View Project!</a></li>
 								</ul>
@@ -66,6 +66,8 @@
 								<article>
 									<header>
 										<h2><a href="https://github.com/Olukem/steam-recommendation">Steam Game Recommendation System using Spark and MLlib</a></h2>
+									</header>
+									<a href="https://github.com/Olukem/steam-recommendation" class="image main"><img src="images/game-console-6603120_1280.jpg" alt="" /></a>
 										<p>This project leverages a dataset extracted from Steam, an online video game distribution service, 
 											to build a collaborative filtering recommendation system. The dataset, steam-200k.csv, contains user 
 											interactions with games, including purchases and playtime. Using Apache Spark and its MLlib library, 
@@ -73,10 +75,25 @@
 											and train a recommendation model using Alternating Least Squares (ALS) matrix factorization. 
 											The project demonstrates the application of big data tools and machine learning techniques to create a 
 											practical recommendation system for a real-world dataset.</p>
-									</header>
-									<a href="https://github.com/Olukem/steam-recommendation" class="image main"><img src="images/game-console-6603120_1280.jpg" alt="" /></a>
 									<ul class="actions special">
 										<li><a href="https://github.com/Olukem/steam-recommendation" class="button large">View Project!</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<h2><a href="https://github.com/Olukem/Product_Review_Sentiment_Analysis">Amazon E-Commerce Product Review Sentiment Analysis</a></h2>
+									</header>
+									<a href="https://github.com/Olukem/Product_Review_Sentiment_Analysis" class="video fit">
+										<video src="images/Demo.mp4" controls autoplay loop muted style="max-width: 100%;">
+										  Your browser does not support the video tag.
+										</video>
+									  </a>
+									<p>In today's e-commerce landscape, analyzing customer feedback is crucial for businesses to make data-driven decisions. 
+										This project focuses on building an end-to-end sentiment analysis solution for customer review for our business stakeholers. By leveraging 
+										Data Science and Machine Learning techniques, the project aims to preprocess, analyze, and visualize customer sentiments from textual reviews.
+										A successful sentiment analysis implementation will significantly enhance customer trust and business growth</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Olukem/Product_Review_Sentiment_Analysis" class="button">View Project!</a></li>
 									</ul>
 								</article>
 								<article>
@@ -138,7 +155,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Oluwakemi</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
