--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<header class="major">
 									<h2><a href="https://github.com/Olukem/Energy-demand-forecasting">Time Series Forecasting of Energy Demand</a></h2>
 								</header>
-								<a href="https://github.com/Olukem/Energy-demand-forecasting" class="image main"><img src="images/time_series.jpg" alt="" class="responsive-image" /></a>
+								<a href="https://github.com/Olukem/Energy-demand-forecasting" class="image main"><img src="images/time_series.jpg" alt="" /></a>
 									<p>This project delivers accurate and reliable energy demand forecasts by leveraging advanced models such as Convolutional Neural Networks (CNN), 
 										Temporal Convolutional Networks (TCN), and XGBoost, we predict future energy consumption trends with precision. An interactive RShiny dashboard 
 										was done to allows users explore real-time forecasts, providing valuable insights into energy demand patterns. 
